# hymn-lang

./: .clang-format  .eslintrc.json  .gitignore  .prettierrc.json  CMakeLists.txt  COMPILE.md  README.md  RELEASE.md  TODO.md  benchmarks.sh  count.sh  debug.sh  install.sh  kill-server.sh  license.sh  lint.sh  makefile  package.json  server.sh  test.sh
test/: CMakeLists.txt  factors.c  main.c  main.h  test.c  test.h  test_hymn.c  test_hymn.h
test/benchmarks/: factors.hm  factors_local.hm  fib.hm  list.hm  local_factors.hm  loop.hm  objects.hm  primes.hm  primes_hidden.hm  tail.hm
test/benchmarks/lua/: factors.lua  factors_local.lua  fib.lua  list.lua  local_factors.lua  loop.lua  objects.lua  primes.lua  tail.lua
test/benchmarks/node/: factors.js  fib.js  list.js  loop.js  objects.js  primes.js
test/benchmarks/python/: factors.py  (+5 more)
test/compare/: compare_self.hm  compare_void.hm
test/dlib/: dlib.c
test/dynamic/: dynamic.c
test/examples/: assert.hm  import_error.hm  leak.hm  mem_except.hm  texture.hm  wad.hm
test/language/: arithmetic.hm  bad_delete.hm  bitwise.hm  do.hm  expressions.hm  import_me.hm  len.hm  literals.hm  objects.hm  operators.hm  optimizations.hm  pass.hm  paths.hm  print.hm  print_recursive.hm  runtime_error.hm  std.hm  try.hm  types.hm  use.hm  util.hm
test/libs/: assert.hm  strings.hm
test/scripts/: arithmetic.hm  assert.hm  break.hm  continue.hm  do.hm  fib.hm  functions.hm  if.hm  import_error.hm  in.hm  init.hm  leak.hm  loops.hm  mem_except.hm  operate.hm  runtime_error.hm  std.hm  switch.hm  try.hm  use.hm  util.hm  while.hm
(+338 files in other folders)
